@@ -745,13 +745,13 @@ on_refreshing (SeahorseContext *sctx, SeahorseOperation *operation, SeahorseWidg
 
 static const GtkActionEntry GENERAL_ENTRIES[] = {
 	{ "remote-menu", NULL, N_("_Remote") }, 
-	{ "app-quit", GTK_STOCK_QUIT, N_("_Quit"), "<control>Q", 
+	{ "app-quit", GTK_STOCK_QUIT, NULL, "<control>Q", 
 	  N_("Close this program"), G_CALLBACK (on_app_quit) }, 
 	{ "file-new", GTK_STOCK_NEW, N_("_New..."), "<control>N", 
 	  N_("Create a new key or item"), G_CALLBACK (on_file_new) }, 
 	{ "file-import", GTK_STOCK_OPEN, N_("_Import..."), "<control>I", 
 	  N_("Import from a file"), G_CALLBACK (on_key_import_file) }, 
-	{ "edit-import-clipboard", GTK_STOCK_PASTE, N_("_Paste"), "<control>V", 
+	{ "edit-import-clipboard", GTK_STOCK_PASTE, NULL, "<control>V", 
 	  N_("Import from the clipboard"), G_CALLBACK (on_key_import_clipboard) }
 };
 
