@@ -1,3 +1,10 @@
+2009-02-17  Gabor Kelemen  <kelemeng@gnome.hu>
+
+	* src/seahorse-keyserver-results.c:
+	* src/seahorse-key-manager.c:
+	* src/seahorse-viewer.c: Get rid of some reused stock item names, 
+	fall back to default. Fixes bug #572140.
+
 2009-02-16  Adam Schrieber  <sadam@clemson.edu>
 
     * libseahorse/seahorse-object.c: Change context to comment. 
